<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bgsetting"
    tools:context=".Setting">

    <TextView
        android:id="@+id/setting_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="35sp"/>

    <RadioGroup
        android:id="@+id/chooseColors"
        android:layout_width="288dp"
        android:layout_height="261dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_header">


        <RadioButton
            android:id="@+id/royalty"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/Royalty"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/coolness"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/Coolness"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/summer"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/summer_dose"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/formal"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/formal"
            android:textSize="25sp" />


    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseColors"
        app:layout_constraintVertical_bias="0.214" />


</androidx.constraintlayout.widget.ConstraintLayout>