<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/regemail"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginBottom="600dp"
        android:hint="@string/email"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logonpass"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginBottom="528dp"
        android:hint="@string/surname"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logonpass"
        app:layout_constraintVertical_bias="0.051" />


    <EditText
        android:id="@+id/name"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginBottom="448dp"
        android:hint="@string/firstname"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logonpass"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/regpass"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginTop="308dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/regbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="216dp"
        android:text="@string/registerbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logonemail"
        app:layout_constraintVertical_bias="0.44" />

</androidx.constraintlayout.widget.ConstraintLayout>